# koji-osbuild

./: .editorconfig  .gitignore  .gitlab-ci.yml  .packit.yaml  .pylintrc  HACKING.md  NEWS.md  README.md  client.py  compose.py  koji-osbuild-plugin.spec  koji-osbuild.spec  koji-osbuild.spec.in  make-tags.sh  meson.build  meson_options.txt  osbuild-local.conf  run-builder.sh  run-koji-container.sh  run-tests.sh  run.sh  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  coverity_scan.yml  create-tag.yml  trigger-gitlab.yml
container/: brew.repo  env  make-tags.sh  rhel.repo  ssl-ca.sh  ssl-user.sh  ssl.cnf
container/builder/: Dockerfile  Dockerfile.rhel  kojid.conf  osbuild-koji.conf  osbuild.krb5.conf  run-kojid.sh
container/hub/: Dockerfile  Dockerfile.fedora  Dockerfile.rhel  hub.conf  kojiweb.conf  run-hub.sh
plugins/builder/: osbuild.py
plugins/cli/: osbuild.py
plugins/hub/: osbuild.py
schutzbot/: Jenkinsfile  deploy.sh  mockbuild.sh  team_ssh_keys.txt  update_github_status.sh
schutzbot/repos/fedora/32/: osbuild-composer.repo
schutzbot/repos/rhel/8.2/: osbuild-composer.repo
schutzbot/repos/rhel/8.3/: osbuild-composer.repo
test/: Dockerfile  action.yml  build-container.sh  copy-creds.sh  entrypoint.sh  integration.sh  make-certs.sh  make-tags.sh  run-builder.sh  run-koji-container.sh  run-openid.sh
test/container/: brew.repo
test/container/builder/: Dockerfile.fedora  Dockerfile.rhel  kojid.conf  osbuild-koji.conf  run-kojid.sh
test/container/hub/: Dockerfile.fedora  Dockerfile.rhel  hub.conf  kojiweb.conf  run-hub.sh  ssl.conf  web.conf
test/data/: composer.ssl.conf  example-ca.pem  example-crt.pem  example-key.pem  krb5.local.conf  openssl.conf  osbuild-composer.toml  osbuild-worker.toml
test/integration/: test_koji.py
test/unit/: plugintest.py  test_builder.py  test_cli.py  test_hub.py
